force-app/main/default/objects/Employee_Skill__c/Employee_Skill__c.object-meta.xml
<CustomObject>
    <description>Junction object between Employee (User) and Skill. Records proficiency level and experience.</description>
    <label>Employee Skill</label>
    <nameField>
        <displayFormat>ES-{0000}</displayFormat>
        <label>Employee Skill Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Employee Skills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>