force-app/main/default/objects/Employee_Skill__c/fields/Certified__c.field-meta.xml
<CustomField>
    <fullName>Certified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Whether employee holds a certification for this skill</description>
    <label>Certified</label>
    <type>Checkbox</type>
</CustomField>