force-app/main/default/objects/Employee_Skill__c/fields/Employee__c.field-meta.xml
<CustomField>
    <fullName>Employee__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Employee with this skill profile</description>
    <inlineHelpText>Select the employee</inlineHelpText>
    <label>Employee</label>
    <referenceTo>User</referenceTo>
    <relationshipLabel>Employee Skills</relationshipLabel>
    <relationshipName>Employee_Skills</relationshipName>
    <type>Lookup</type>
</CustomField>