force-app/main/default/objects/Employee_Skill__c/fields/Proficiency_Level__c.field-meta.xml
<CustomField>
    <fullName>Proficiency_Level__c</fullName>
    <description>Employee&apos;s proficiency level in this skill</description>
    <label>Proficiency Level</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Beginner</fullName>
                <default>true</default>
                <label>Beginner</label>
            </value>
            <value>
                <fullName>Intermediate</fullName>
            </value>
            <value>
                <fullName>Advanced</fullName>
            </value>
            <value>
                <fullName>Expert</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>