force-app/main/default/objects/Employee_Skill__c/fields/Skill__c.field-meta.xml
<CustomField>
    <fullName>Skill__c</fullName>
    <description>Related skill from taxonomy</description>
    <inlineHelpText>Select the related skill</inlineHelpText>
    <label>Skill</label>
    <referenceTo>Skill__c</referenceTo>
    <relationshipLabel>Employee Skills</relationshipLabel>
    <relationshipName>Employee_Skills</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>